Bug fix: assignment with predicate selector